--- a/index.html
+++ b/index.html
@@ -133,17 +133,6 @@
       20% { opacity: 1; transform: translateY(-20px) scale(1); }
       100% { opacity: 0; transform: translateY(-80px) scale(0.9); }
     }
-
-    /* 📱 Diseño responsivo */
-    @media (max-width: 600px) {
-      .house-svg { width: 150px; height: 150px; }
-      .click-text { font-size: 18px; padding: 8px 18px; }
-      .gatito { width: 160px; }
-      .mensaje { font-size: 16px; bottom: 15px; }
-      .frase { font-size: 16px; padding: 6px 12px; }
-      .globo { width: 40px; height: 90px; }
-      .corazon, .corazon::before, .corazon::after { width: 30px; height: 30px; }
-    }
   </style>
 </head>
 <body>
@@ -205,11 +194,11 @@
     const scene = document.getElementById("scene");
     const gatito = document.getElementById("gatito");
     const frases = [
-      "Eres mi td yhibel ❤️",
+      "Eres mi persona favorita ❤️",
       "Siempre contigo 💕",
       "Eres mi felicidad 🐱",
       "Gracias por existir 🌸",
-      "Te quiero con todo mi corazón 💖"
+      "Te amo con todo mi corazón 💖"
     ];
 
     /* Mostrar escena */
