--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       font-size: 20px; color: #fff; font-weight: bold;
       text-shadow: 0 0 5px #ff007f, 0 0 10px #ff66b2, 0 0 15px #ff3399;
       animation: parpadeoTexto 1.5s infinite alternate;
+      z-index: 200; /* se asegura de estar encima */
     }
     @keyframes parpadeoTexto {
       0% { text-shadow: 0 0 5px #ff007f, 0 0 10px #ff66b2; }
@@ -106,6 +107,7 @@
       width: 220px; height: auto; cursor: pointer;
       position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
       transition: transform 0.2s;
+      z-index: 100;
     }
     .gatito.saltar { animation: saltar 0.6s ease; }
     @keyframes saltar {
@@ -126,13 +128,34 @@
       color: #e91e63; background: rgba(255,255,255,0.9);
       padding: 8px 16px; border-radius: 20px;
       box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-      pointer-events: none; z-index: 100;
+      pointer-events: none; z-index: 300;
       animation: floatUp 3s ease-out forwards;
     }
     @keyframes floatUp {
       0% { opacity: 0; transform: translateY(0) scale(0.8); }
       20% { opacity: 1; transform: translateY(-20px) scale(1); }
       100% { opacity: 0; transform: translateY(-80px) scale(0.9); }
+    }
+
+    /* Ajustes para celular */
+    @media (max-height: 600px) {
+      .gatito {
+        width: 160px;
+      }
+      .mensaje {
+        bottom: 10px;
+        font-size: 16px;
+        padding: 4px 10px;
+      }
+    }
+
+    @media (max-width: 400px) {
+      .gatito {
+        width: 150px;
+      }
+      .mensaje {
+        font-size: 15px;
+      }
     }
   </style>
 </head>
