--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       align-items: center;
       overflow: hidden;
       font-family: 'Arial', sans-serif;
+      touch-action: manipulation; /* evita zoom en doble tap */
     }
 
     /* Transiciones iniciales */
@@ -91,11 +92,13 @@
 
     /* Texto inferior */
     .mensaje {
-      position: absolute; bottom: 20px; width: 100%; text-align: center;
+      position: fixed; /* fijo para que siempre esté en pantalla */
+      bottom: 20px; width: 100%; text-align: center;
       font-size: 20px; color: #fff; font-weight: bold;
       text-shadow: 0 0 5px #ff007f, 0 0 10px #ff66b2, 0 0 15px #ff3399;
       animation: parpadeoTexto 1.5s infinite alternate;
-      z-index: 200; /* se asegura de estar encima */
+      z-index: 9999; /* siempre encima */
+      pointer-events: none;
     }
     @keyframes parpadeoTexto {
       0% { text-shadow: 0 0 5px #ff007f, 0 0 10px #ff66b2; }
@@ -139,23 +142,13 @@
 
     /* Ajustes para celular */
     @media (max-height: 600px) {
-      .gatito {
-        width: 160px;
-      }
-      .mensaje {
-        bottom: 10px;
-        font-size: 16px;
-        padding: 4px 10px;
-      }
+      .gatito { width: 160px; }
+      .mensaje { bottom: 10px; font-size: 16px; padding: 4px 10px; }
     }
 
     @media (max-width: 400px) {
-      .gatito {
-        width: 150px;
-      }
-      .mensaje {
-        font-size: 15px;
-      }
+      .gatito { width: 150px; }
+      .mensaje { font-size: 15px; }
     }
   </style>
 </head>
@@ -222,7 +215,7 @@
       "Siempre contigo 💕",
       "Eres mi felicidad 🐱",
       "Gracias por existir 🌸",
-      "Te amo con todo mi corazón 💖"
+      "Con vos todo es más bonito ✨"
     ];
 
     /* Mostrar escena */
