--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       align-items: center;
       overflow: hidden;
       font-family: 'Arial', sans-serif;
-      touch-action: manipulation; /* evita zoom en doble tap */
     }
 
     /* Transiciones iniciales */
@@ -92,13 +91,11 @@
 
     /* Texto inferior */
     .mensaje {
-      position: fixed; /* fijo para que siempre esté en pantalla */
-      bottom: 20px; width: 100%; text-align: center;
+      position: fixed; bottom: 20px; width: 100%; text-align: center;
       font-size: 20px; color: #fff; font-weight: bold;
       text-shadow: 0 0 5px #ff007f, 0 0 10px #ff66b2, 0 0 15px #ff3399;
       animation: parpadeoTexto 1.5s infinite alternate;
-      z-index: 9999; /* siempre encima */
-      pointer-events: none;
+      z-index: 9999;
     }
     @keyframes parpadeoTexto {
       0% { text-shadow: 0 0 5px #ff007f, 0 0 10px #ff66b2; }
@@ -141,14 +138,13 @@
     }
 
     /* Ajustes para celular */
-    @media (max-height: 600px) {
+    @media (max-height: 700px) {
       .gatito { width: 160px; }
-      .mensaje { bottom: 10px; font-size: 16px; padding: 4px 10px; }
     }
 
-    @media (max-width: 400px) {
-      .gatito { width: 150px; }
-      .mensaje { font-size: 15px; }
+    @media (max-width: 480px) {
+      .gatito { width: 140px; }
+      .mensaje { font-size: 15px; bottom: 10px; }
     }
   </style>
 </head>
@@ -215,7 +211,7 @@
       "Siempre contigo 💕",
       "Eres mi felicidad 🐱",
       "Gracias por existir 🌸",
-      "Con vos todo es más bonito ✨"
+      "Eres lo mejor que me pasó 💫"
     ];
 
     /* Mostrar escena */
