--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 
     /* Texto inferior */
     .mensaje {
-      position: fixed; bottom: 20px; width: 100%; text-align: center;
+      position: absolute; bottom: 20px; width: 100%; text-align: center;
       font-size: 20px; color: #fff; font-weight: bold;
       text-shadow: 0 0 5px #ff007f, 0 0 10px #ff66b2, 0 0 15px #ff3399;
       animation: parpadeoTexto 1.5s infinite alternate;
-      z-index: 9999;
+      z-index: 200;
     }
     @keyframes parpadeoTexto {
       0% { text-shadow: 0 0 5px #ff007f, 0 0 10px #ff66b2; }
@@ -139,11 +139,11 @@
 
     /* Ajustes para celular */
     @media (max-height: 700px) {
-      .gatito { width: 160px; }
+      .gatito { width: 160px; top: 45%; } /* 🔼 más pequeño y subido */
     }
 
     @media (max-width: 480px) {
-      .gatito { width: 140px; }
+      .gatito { width: 140px; top: 43%; } /* 🔼 aún más arriba en pantallas pequeñas */
       .mensaje { font-size: 15px; bottom: 10px; }
     }
   </style>
@@ -211,7 +211,7 @@
       "Siempre contigo 💕",
       "Eres mi felicidad 🐱",
       "Gracias por existir 🌸",
-      "Eres lo mejor que me pasó 💫"
+      "Te amo con todo mi corazón 💖"
     ];
 
     /* Mostrar escena */
