--- a/index.html
+++ b/index.html
@@ -208,10 +208,12 @@
     const gatito = document.getElementById("gatito");
     const frases = [
       "Eres mi persona favorita ❤️",
-      "Siempre contigo 💕",
+      "Siempre estare para ti 💕",
       "Eres mi felicidad 🐱",
-      "Gracias por existir 🌸",
-      "Te amo con todo mi corazón 💖"
+      "Gracias por existir y aparecer en mi vida 🌸",
+      "Te quiero demasiaado yhibel 🌸",
+      "Eres muy hermosa 🌸",
+      "Y mi corazon tuccum tucum tucum 💖"
     ];
 
     /* Mostrar escena */
